--- a/package.json
+++ b/package.json
@@ -47,5 +47,12 @@
   "bugs": {
     "url": "https://github.com/nordnet/cordova-universal-links-plugin/issues"
   },
-  "homepage": "https://github.com/nordnet/cordova-universal-links-plugin#readme"
+  "homepage": "https://github.com/nordnet/cordova-universal-links-plugin#readme",
+  "main": "index.js",
+  "directories": {
+    "doc": "docs"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  }
 }
